--- a/css/main.css
+++ b/css/main.css
@@ -7038,6 +7038,11 @@ h4 {
 .navbar-menu {
   font-size: 13.5px; }
 
+.border-around-text {
+  border: 1px solid;
+  display: inline-block;
+  padding: 1rem; }
+
 .is-hero {
   height: 90vh;
   display: flex;
@@ -7048,6 +7053,11 @@ h4 {
   background-size: cover;
   background-position-y: bottom;
   background-position-x: left; }
+
+.bg-1 {
+  background-image: url("../img/bg-1.jpg");
+  background-size: cover;
+  background-position-y: center; }
 
 .hero-text {
   background-color: rgba(255, 143, 27, 0.1);
