--- a/css/main.css
+++ b/css/main.css
@@ -6994,6 +6994,10 @@ p {
 h4 {
   margin-bottom: 1rem; }
 
+iframe {
+  width: 100%;
+  border-radius: 4px; }
+
 .margin-top {
   margin-top: 1rem; }
 
@@ -7005,6 +7009,12 @@ h4 {
 
 .text-align-center {
   text-align: center; }
+
+.color-yellow {
+  color: #f1c000; }
+
+.align-self-center {
+  align-self: center; }
 
 .marker-pen {
   background: linear-gradient(transparent 60%, #ffe999 0%);
@@ -7069,8 +7079,6 @@ h4 {
 .styled-heading {
   margin: 0;
   /* デフォルトCSS打ち消し */
-  font-size: 24px;
-  /* 文字サイズ指定 */
   position: relative;
   /* 位置調整 */
   font-weight: normal;
@@ -7106,12 +7114,40 @@ h4 {
   z-index: -1;
   /* 重なり調整 */ }
 
+.point-heading {
+  position: relative;
+  border-top: solid 2px coral;
+  border-bottom: solid 2px coral;
+  line-height: 1.4;
+  padding: 0.8em 0.5em;
+  margin: 2em 0 0.5em; }
+
+.point-heading:after {
+  /*タブ*/
+  position: absolute;
+  font-family: "Font Awesome 5 Free",'Quicksand','Avenir','Arial',sans-serif;
+  content: '\f0a7\ POINT';
+  background: coral;
+  color: #fff;
+  left: 0px;
+  bottom: 100%;
+  border-radius: 5px 5px 0 0;
+  padding: 5px 7px 3px;
+  font-size: 0.7em;
+  line-height: 1;
+  letter-spacing: 0.05em; }
+
 .card {
   border-radius: 4px; }
 
 @media screen and (max-width: 768px) {
   .arrow {
     transform: rotateZ(90deg); } }
+
+@media screen and (max-width: 768px) {
+  .reverse {
+    display: flex;
+    flex-direction: column-reverse; } }
 
 .cross {
   background-image: url(../img/cross.svg);
