--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -65,6 +65,9 @@ iframe {
 .margin-top-2 {
     margin-top: 2rem;
 }
+.margin-top-10px {
+    margin-top: 10px;
+}
 .margin-bottom {
     margin-bottom: 1rem;
 }
@@ -84,6 +87,28 @@ iframe {
     align-self: center;
 }
 
+.first-letter {
+    line-height: 2rem;
+}
+.first-letter:first-letter {
+    font-size: 2em;
+    color: #7172ac;
+}
+
+.position-relative {
+    position: relative;
+}
+
+.border-radius {
+    border-radius: 4px;
+}
+
+img.profile-picture {
+    border-radius: 999px;
+    height: 100px;
+    width: 100px;
+}
+
 .marker-pen {
     background: linear-gradient(transparent 60%, #ffe999 0%);
     display: inline;
@@ -94,6 +119,22 @@ iframe {
     background-color: powderblue;
     padding: 12px;
     display: inline-block;
+}
+
+.heading-2 {
+    position: relative;
+    color: white;
+    background: #81d0cb;
+    line-height: 1.4;
+    padding: 0.5em 0.5em 0.5em 1.8em;
+    display: inline-block;
+    border-radius: 8px;
+}
+.heading-2:before {
+    font-family: "Font Awesome 5 Free";
+    content: "\f14a";
+    position: absolute;
+    left : 0.5em; /*左端からのアイコンまでの距離*/
 }
 
 .listify::before {
@@ -141,10 +182,10 @@ iframe {
 }
 
 .bg-hero {
-    background-image: url("../img/hero-4.jpg");
+    background-image: url("../img/hero-6.jpg");
     background-size: cover;
-    background-position-y: bottom;
-    background-position-x: left;
+    background-position-y: top;
+    background-position-x: right;
 }
 
 .bg-1 {
@@ -155,8 +196,15 @@ iframe {
 
 
 .hero-text {
-    background-color: rgba(255, 143, 27, 0.1);
+    // background-color: rgba(255, 143, 27, 0.1);
     border-radius: 1rem;
+    
+    .title {
+        color: #fff !important;
+    }
+    .subtitle {
+        color: #fff !important;
+    }
 }
 
 .subtitle {
@@ -217,6 +265,14 @@ iframe {
     border-radius: 4px;
 }
 
+.bordered-div {
+    border: 2px solid #81d0cb;
+    border-radius: 8px;
+    padding: 1rem;
+    background-color: white;
+    position: relative;
+    top: -32px;
+}
 
 // === Other Original Components ===
 
