--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -265,6 +265,10 @@ img.profile-picture {
     border-radius: 4px;
 }
 
+.button {
+    min-width: 12rem;
+}
+
 .bordered-div {
     border: 2px solid #81d0cb;
     border-radius: 8px;
