--- a/css/main.css
+++ b/css/main.css
@@ -7180,6 +7180,9 @@ img.profile-picture {
 .card {
   border-radius: 4px; }
 
+.button {
+  min-width: 12rem; }
+
 .bordered-div {
   border: 2px solid #81d0cb;
   border-radius: 8px;
